--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 *{
     font-family: 'Indie Flower', cursive;
+    
 }
 #navbar2 {
     display: flex;
@@ -9,7 +10,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    width: fill;
+    width: 100%;
     border: 2px solid black;
     justify-content: space-evenly;
     background-color: #de369d;
@@ -64,40 +65,53 @@
 #navbar {
     display: flex;
     position: fixed;
-    
+    float: left;
     right: 0;
     left: 0;
     top: 0;
-    width: fill;
+    width: 100%;
     border: 2px solid black;
     justify-content:space-evenly;
     background-color: #4c934c;
     padding: 5px;
     height: 25px;
+    max-width:100%
+    
     
 }
+/* 
+@media only screen and (max-width: 620px) {
+  #home #bouq #plants #contact {
+    width: 100%;
+  } */
+
 #home{
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  padding-left: 10px;
+  /* position: absolute; */
+ width: 60%;
+  /* padding-left: 10px; */
   font-size: 25px;
+  /* font-size:1.4vw */
   
 }
 #bouq{
-  position: absolute;
-  right: 250px;
+  /* position: left; */
+  width: 10%;
   font-size: 25px;
+  /* font-size:1.4vw */
 }
 #plants{
-  position: absolute;
+  /* position: absolute;
   right: 100px;
-  padding-right: 5px;
+  padding-right: 5px; */
+  width: 10%;
+  
   font-size: 25px;
 }
 #contact{
-  position: absolute;
+  /* position: absolute;
   right: 400px;
+  font-size: 25px; */
+  width: 10%;
   font-size: 25px;
 }
 a:link {
@@ -166,9 +180,74 @@ div.gallery {
     display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 100%;
   object-fit: cover;
   max-width: 100%;
 
    
+  }
+
+     
+        
+  .topnav {
+    overflow: hidden;
+    display: flex;
+    position: fixed;
+    float: left;
+    right: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    border: 2px solid black;
+    /* justify-content:space-evenly; */
+    background-color: #4c934c;
+    /* padding: 5px;
+    height: 25px;
+    max-width:100% */
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    /* background-color: #04AA6D; */
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
   }
