--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
       transform: scale(1);
   }
 }
-#navbar {
+/* #navbar {
     display: flex;
     position: fixed;
     float: left;
@@ -78,39 +78,31 @@
     max-width:100%
     
     
-}
-/* 
-@media only screen and (max-width: 620px) {
-  #home #bouq #plants #contact {
-    width: 100%;
-  } */
+} */
+
 
 #home{
-  /* position: absolute; */
- width: 60%;
-  /* padding-left: 10px; */
+  
+  width: 60%;
+  
   font-size: 25px;
-  /* font-size:1.4vw */
+  
   
 }
 #bouq{
-  /* position: left; */
+  
   width: 10%;
   font-size: 25px;
-  /* font-size:1.4vw */
+  
 }
 #plants{
-  /* position: absolute;
-  right: 100px;
-  padding-right: 5px; */
+ 
   width: 10%;
   
   font-size: 25px;
 }
 #contact{
-  /* position: absolute;
-  right: 400px;
-  font-size: 25px; */
+ 
   width: 10%;
   font-size: 25px;
 }
@@ -158,11 +150,7 @@ div.gallery {
   
   div.gallery:hover {
     border: 1px solid #777;
-    /* width: 50%;
-    transition: width 3s;
-    transition-delay: 0.5s;
-    transition-timing-function: ease; */
-    /* z-index: -1; */
+    
 
   }
   
@@ -187,7 +175,9 @@ div.gallery {
    
   }
 
-     
+   iframe {
+    max-width: 100%;
+   }  
         
   .topnav {
     overflow: hidden;
@@ -196,24 +186,25 @@ div.gallery {
     float: left;
     right: 0;
     left: 0;
-    top: 0;
+    top: 0; 
     width: 100%;
     border: 2px solid black;
-    /* justify-content:space-evenly; */
+    justify-content:space-evenly;
     background-color: #4c934c;
-    /* padding: 5px;
-    height: 25px;
-    max-width:100% */
+    height: 45px;
+    max-width:100%;
+    flex-wrap:wrap;
   }
   
   .topnav a {
     float: left;
-    display: block;
+    display: flex;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    flex:1;
   }
   
   .topnav a:hover {
@@ -230,7 +221,7 @@ div.gallery {
     display: none;
   }
   
-  @media screen and (max-width: 600px) {
+  /* @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
@@ -250,4 +241,158 @@ div.gallery {
       display: block;
       text-align: left;
     }
-  }
+  } */
+
+  /*
+ * Made by Erik Terwan
+ * 24th of November 2015
+ * MIT License
+ *
+ *
+ * If you are thinking of using this in
+ * production code, beware of the browser
+ * prefixes.
+ */
+
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
