--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ div.gallery {
 #menuToggle a
 {
   text-decoration: none;
-  color: #232323;
+  color: #4c934c;
   
   transition: color 0.3s ease;
 }
